change deploy.sh