@@ -35,9 +35,7 @@ fi
 
 
 JAVA_OPTS="-Djava.io.tmpdir=$base/tmp -DappName=${appName} -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true -Dfile.encoding=UTF-8 -Djava.security.egd=file:/dev/./urandom"
-JAVA_OPTS_MEM="-server -Xms1024m -Xmx1024m -XX:NewSize=512m -XX:MaxNewSize=512m -XX:PermSize=128m -XX:MaxPermSize=196m "
-JAVA_OPTS_CMS="-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly"
-JAVA_OPTS_GC="-XX:+PrintTenuringDistribution -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:logs/gc-${appName}.log"
+JAVA_OPTS_MEM_AND_GC="-Xms1024m -Xmx1024m -Dio.netty.leakDetection.level=paraniod -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=256m -Xloggc:logs/gc-${appName}.log -XX:+UseConcMarkSweepGC -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+PrintTenuringDistribution -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=200M -XX:+HeapDumpAfterFullGC -XX:+HeapDumpBeforeFullGC -XX:HeapDumpPath=logs/dumpfile-${appName}"
 TYPE=$2
 COMMAND=$3
 URL=$4
@@ -46,7 +44,7 @@ cd $base
 if [ ! -d "logs" ]; then
   mkdir logs
 fi
-java $JAVA_OPTS $JAVA_OPTS_MEM $JAVA_OPTS_CMS $JAVA_OPTS_GC -classpath 'lib/*:conf' io.esastack.ClientApplication $TYPE $COMMAND $URL 1>>logs/server.log 2>&1 &
+java $JAVA_OPTS $JAVA_OPTS_MEM_AND_GC -classpath 'lib/*:conf' io.esastack.ClientApplication $TYPE $COMMAND $URL 1>>logs/server.log 2>&1 &
 
 echo $! > $base/server.pid
 
